<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cin.mylampada20.Device">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_lampada_la_de_casa"
        android:id="@+id/textViewTitle"
        android:textSize="31sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignParentStart="true"
        android:weightSum="10"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <Button
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/turn_on"
            android:id="@+id/buttonTurnOn"
            android:onClick="on" />

        <Button
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/turn_off"
            android:id="@+id/buttonTurnOff"
            android:onClick="off" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:weightSum="10"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/get_visible"
            android:id="@+id/buttonGetVisible"
            android:onClick="visible" />

        <Button
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/list_devices"
            android:id="@+id/buttonListDevices"
            android:onClick="list" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:weightSum="10"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/linearLayout3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_discovery"
            android:id="@+id/buttonStartDiscovery"
            android:layout_weight="5"
            android:onClick="discovery" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_discovery"
            android:id="@+id/buttonCancelDiscovery"
            android:layout_weight="5"
            android:onClick="stopDiscovery" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:choiceMode="singleChoice"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:scrollbars="horizontal|vertical" />

</RelativeLayout>
