<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_0"
            android:id="@+id/buttonSend0"
            android:layout_weight="5"
            android:textSize="50sp"
            android:onClick="sendNumberZero" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_1"
            android:id="@+id/buttonSend1"
            android:layout_weight="5"
            android:textSize="50sp"
            android:onClick="sendNumberOne" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_lampada_la_de_casa"
        android:id="@+id/textView"
        android:textSize="41sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MsgFromBlueTooth"
        android:id="@+id/textViewMsgReciver"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test"
        android:id="@+id/buttonTest"
        android:layout_above="@+id/linearLayout4"
        android:layout_alignParentEnd="true" />

</RelativeLayout>